<resources>
    <string name="app_name">Travel App</string>
    <string name="description">Description</string>
    <string name="landmark_name_req">Landmark Name <font color='#FF0000'>*</font></string>
    <string name="landmark_description_req">Landmark Description <font color='#FF0000'>*</font></string>
    <string name="city_name_req">City Name <font color='#FF0000'>*</font></string>
    <string name="city_description_req">City Description <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="landmark">Landmark</string>
    <string name="add_city_title">Add City</string>
    <string name="add_landmark_title">Add Landmark</string>
    <string name="edit_city_title">Edit City</string>
    <string name="edit_landmark_title">Edit Landmark</string>
    <string name="city">City</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_city">Edit Item</string>
    <string name="add_new_city">Add new City</string>
    <string name="add_new_landmark">Add new Landmark</string>
    <string name="city_detail_fragment_title">City Details</string>
    <string name="landmark_detail_fragment_title">Landmarks Details</string>
    <string name="back_to_cityList">Back</string>
    <string name="cannot_delete_city_with_landmarks_title">Cant delete city with landmarks!</string>
    <string name="cannot_delete_city_with_landmarks_message">Cant delete city with landmarks!</string>
    <string name="cancel">Cancel</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>


</resources>