<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    tools:context="com.example.listmaker.ui.LandmarkDetailFragment">

    <TextView
        android:id="@+id/landmark_name"
        style="@style/Widget.Inventory.TextView"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="City" />

    <TextView
        android:id="@+id/landmark_description"
        style="@style/Widget.Inventory.TextView"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landmark_name"
        tools:text="Description" />

    <Button
        android:id="@+id/delete_landmark"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/margin"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landmark_description" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_landmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_between_elements"
        android:layout_marginBottom="@dimen/margin_between_elements"
        android:contentDescription="@string/edit_city"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/back_to_cityList"
        android:src="@android:drawable/ic_media_previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>